# autoDrone

./: README.md
ROS_node_src/main_pkg/: package.xml  setup.py
ROS_node_src/msg_interface/: package.xml
ROS_node_src/msg_interface/msg/: UnityToMain.msg
docs/: install.md
main_pkg/: package.xml  setup.py
msg_interface/: CMakeLists.txt
msg_interface/srv/: MainToNN.srv
train_src/: CNN_PPO_agent.py  CV_feature_extractor.py  DNN_PPO_agent.py  DNN_SAC_agent.py  PPO_main.py  SAC_main.py
