<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_pkg</name>
  <version>0.0.0</version>
  <description>main pkg for autoDrone project</description>
  <maintainer email="msryu00@gmail.com">dding</maintainer>
  <license>MIT license</license>
  <author email="msryu00@gmail.com">Ryu</author>
  <author email="msryu00@gmail.com">Myeongseok Ryu</author>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>msg_interface</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
